--- a/Edu_Skill/views/category_details_views.xml
+++ b/Edu_Skill/views/category_details_views.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-
 <odoo>
 
     <record id="view_course_tree" model="ir.ui.view">
         <field name="name">category.detail.tree</field>
         <field name="model">category.detail</field>
         <field name="arch" type="xml">
-            <tree decoration-success="state == 'done'" decoration-info="state == 'draft'" decoration-danger = "state == 'cancle'" decoration-warning="state == 'in_process'">
+            <tree
+                decoration-success="state == 'done'"
+                decoration-info="state == 'draft'"
+                decoration-danger="state == 'cancle'"
+                decoration-warning="state == 'in_process'"
+            >
                 <field name="category_name" />
-                <field name="activity_ids" widget="list_activity" optional="show"/>
-                <field name="state" decoration-success="state == 'done'" decoration-info="state == 'draft'" decoration-danger = "state == 'cancle'" decoration-warning="state == 'in_process'" widget="badge"/>
+                <field name="activity_ids" widget="list_activity" optional="show" />
+                <field
+                    name="state"
+                    decoration-success="state == 'done'"
+                    decoration-info="state == 'draft'"
+                    decoration-danger="state == 'cancle'"
+                    decoration-warning="state == 'in_process'"
+                    widget="badge"
+                />
             </tree>
         </field>
     </record>
@@ -19,7 +30,7 @@
            <field name="code">category.detail</field>
            <field name="prefix">CD</field>
            <field name="padding">5</field>
-           <field name="company_id" eval="False"/>
+           <field name="company_id" eval="False" />
        </record>
     </data>
     <record id="category_view_form" model="ir.ui.view">
@@ -29,25 +40,31 @@
             <form>
                 <sheet>
                     <h1>
-                        <field name="reference_no"/>
+                        <field name="reference_no" />
                     </h1>
                     <!-- Create a smart buttton -->
                     <div class="oe_button_box" name="button_box">
-                            <button name="action_open_course" type="object" class="oe_stat_button" icon="fa-book" attrs="{'invisible': [('course_count', '=', 0)]}">
+                            <button
+                            name="action_open_course"
+                            type="object"
+                            class="oe_stat_button"
+                            icon="fa-book"
+                            attrs="{'invisible': [('course_count', '=', 0)]}"
+                        >
                                 <div class="o_stat_info">
                                     <field name="course_count" class="oe_stat_value" />
                                     <span class="o_stat_text">Course</span>
                                 </div>
                             </button>
                     </div>
-                    <field name="category_image" widget="image" class="oe_avatar"/>
+                    <field name="category_image" widget="image" class="oe_avatar" />
                     <group>
                         <group>
-                            <field name="category_name"/>
-                            <field name="state"/>
+                            <field name="category_name" />
+                            <field name="state" />
                         </group>
                         <group>
-                            <field name="category_upload_date"/>
+                            <field name="category_upload_date" />
                         </group>
                     </group>
                 </sheet>
@@ -73,10 +90,18 @@
         <field name="model">category.detail</field>
         <field name="arch" type="xml">
             <search>
-                <field name="category_name"/>
-                <filter name="filter_category" string="Category" domain="[('category_name', '=','category_name')]"/>
+                <field name="category_name" />
+                <filter
+                    name="filter_category"
+                    string="Category"
+                    domain="[('category_name', '=','category_name')]"
+                />
                 <group expand="0" string="Group By">
-                    <filter string="Category Name" name="category_name" context="{'group_by':'category_name'}"/>
+                    <filter
+                        string="Category Name"
+                        name="category_name"
+                        context="{'group_by':'category_name'}"
+                    />
                 </group>
             </search>
         </field>
