--- a/Edu_Skill/views/course_order.xml
+++ b/Edu_Skill/views/course_order.xml
@@ -1,25 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_order_tree" model="ir.ui.view">
         <field name="name">order.detail.tree</field>
         <field name="model">order.detail</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="first_name"/>
-                <field name="last_name"/>
-                <field name="total_price"/>
-                <field name="payment_mode"/>
-                <field name="state"/>
+                <field name="first_name" />
+                <field name="last_name" />
+                <field name="total_price" />
+                <field name="payment_mode" />
+                <field name="state" />
             </tree>
         </field>
     </record>
     <data>
-       <record id="seq_order_detail" model="ir.sequence">
+       <record id="seq_order_details" model="ir.sequence">
            <field name="name">Course Order</field>
            <field name="code">order.detail</field>
            <field name="prefix">CO</field>
            <field name="padding">5</field>
-           <field name="company_id" eval="False"/>
+           <field name="company_id" eval="False" />
        </record>
     </data>
 
@@ -30,24 +30,24 @@
             <form>
                 <sheet>
                     <h1>
-                        <field name="reference_no"/>
+                        <field name="reference_no" />
                     </h1>
                     <group>
                         <group>
-                            <field name="first_name"/>
-                            <field name="total_price"/>
-                            <field name="payment_id"/>
-                            <field name="state"/>
+                            <field name="first_name" />
+                            <field name="total_price" />
+                            <field name="payment_id" />
+                            <field name="state" />
                         </group>
                         <group>
-                            <field name="last_name"/>
-                            <field name="payment_mode"/>
-                            <field name="order_id"/>
-                            <field name="is_paid" invisible="1"/>
+                            <field name="last_name" />
+                            <field name="payment_mode" />
+                            <field name="order_id" />
+                            <field name="is_paid" invisible="1" />
                         </group>
                     </group>
                     <group>
-                        <field name="admin_note"/>
+                        <field name="admin_note" />
                     </group>
                 </sheet>
             </form>
@@ -70,17 +70,42 @@
         <field name="model">order.detail</field>
         <field name="arch" type="xml">
             <search>
-                <field name="first_name" string="First Name" filter_domain="['|',('first_name','ilike',self),('last_name','ilike',self)]" />
-                <filter name="filter_pending" string="Pending" domain="[('state', '=','pending')]"/>
-                <separator/>
-                <filter name="filter_actepted" string="Actepted" domain="[('state','=','actepted')]"/>
-                <separator/>
-                <filter name="filter_cancle" string="Cancle" domain="[('state','=','cancle')]"/>
+                <field
+                    name="first_name"
+                    string="First Name"
+                    filter_domain="['|',('first_name','ilike',self),('last_name','ilike',self)]"
+                />
+                <filter
+                    name="filter_pending"
+                    string="Pending"
+                    domain="[('state', '=','pending')]"
+                />
+                <separator />
+                <filter
+                    name="filter_actepted"
+                    string="Actepted"
+                    domain="[('state','=','actepted')]"
+                />
+                <separator />
+                <filter
+                    name="filter_cancle"
+                    string="Cancle"
+                    domain="[('state','=','cancle')]"
+                />
                 <group expand="0" string="Group By">
-                    <filter string="State" name="group_by_state" context="{'group_by':'state'}"/>
+                    <filter
+                        string="State"
+                        name="group_by_state"
+                        context="{'group_by':'state'}"
+                    />
                 </group>
                 <searchpanel>
-                    <field name="state" icon="fa-orders" select="multi" enable_counters="1"/>
+                    <field
+                        name="state"
+                        icon="fa-orders"
+                        select="multi"
+                        enable_counters="1"
+                    />
                 </searchpanel>
             </search>
         </field>
