--- a/Edu_Skill/views/course_order_item.xml
+++ b/Edu_Skill/views/course_order_item.xml
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <record id="view_order_tree" model="ir.ui.view">
+    <record id="view_order_item_tree" model="ir.ui.view">
         <field name="name">course.item.order.detail.tree</field>
         <field name="model">course.item.order.detail</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="order_id"/>
-                <field name="user_first_name"/>
-                <field name="user_last_name"/>
-                <field name="course_name"/>
-                <field name="price"/>
+                <field name="order_id" />
+                <field name="user_first_name" />
+                <field name="user_last_name" />
+                <field name="course_name" />
+                <field name="price" />
             </tree>
         </field>
     </record>
@@ -19,7 +19,7 @@
            <field name="code">course.item.order.detail</field>
            <field name="prefix">COI</field>
            <field name="padding">5</field>
-           <field name="company_id" eval="False"/>
+           <field name="company_id" eval="False" />
        </record>
     </data>
     <record id="view_order_form" model="ir.ui.view">
@@ -29,14 +29,14 @@
             <form>
                 <sheet>
                     <h1>
-                        <field name="reference_no"/>
+                        <field name="reference_no" />
                     </h1>
                     <group>
-                        <field name="order_id"/>
-                        <field name="user_first_name"/>
-                        <field name="user_last_name"/>
-                        <field name="course_name"/>
-                        <field name="price"/>
+                        <field name="order_id" />
+                        <field name="user_first_name" />
+                        <field name="user_last_name" />
+                        <field name="course_name" />
+                        <field name="price" />
                     </group>
                 </sheet>
             </form>
@@ -54,17 +54,26 @@
         </field>
     </record>
 
-    <record id="view_order_search" model="ir.ui.view">
+    <record id="view_order_item_search" model="ir.ui.view">
         <field name="name">course.item.order.detail.search</field>
         <field name="model">course.item.order.detail</field>
         <field name="arch" type="xml">
             <search>
-                <filter name="course_name" string="course_name"/>
+                <filter name="course_name" string="course_name" />
                 <group expand="0" string="Group By">
-                    <filter string="course_name" name="group_by_course_name" context="{'group_by':'course_name'}"/>
+                    <filter
+                        string="course_name"
+                        name="group_by_course_name"
+                        context="{'group_by':'course_name'}"
+                    />
                 </group>
                 <searchpanel>
-                    <field name="course_name" icon="fa-book" select="multi" enable_counters="1"/>
+                    <field
+                        name="course_name"
+                        icon="fa-book"
+                        select="multi"
+                        enable_counters="1"
+                    />
                 </searchpanel>
             </search>
         </field>
