--- a/Edu_Skill/views/quiz_result_detail.xml
+++ b/Edu_Skill/views/quiz_result_detail.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_quiz_result_tree" model="ir.ui.view">
         <field name="name">quiz.result.tree</field>
         <field name="model">quiz.result</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="user_id"/>
-                <field name="user_last_name"/>
-                <field name="percentge"/>
+                <field name="user_id" />
+                <field name="user_last_name" />
+                <field name="percentge" />
             </tree>
         </field>
     </record>
@@ -19,21 +19,21 @@
             <form>
                 <sheet>
                     <h1>
-                        <field name="reference_no"/>
+                        <field name="reference_no" />
                     </h1>
                     <group>
                         <group>
-                            <field name="course_id"/>
-                            <field name="user_id"/>
-                            <field name="total_right_answer"/>
-                            <field name="user_input"/>
-                            <field name="percentge"/>
+                            <field name="course_id" />
+                            <field name="user_id" />
+                            <field name="total_right_answer" />
+                            <field name="user_input" />
+                            <field name="percentge" />
                         </group>
                         <group>
-                            <field name="user_last_name"/>
-                            <field name="total_wrong_answer"/>
-                            <field name="right_answer"/>
-                            <field name="verified" invisible="1"/>
+                            <field name="user_last_name" />
+                            <field name="total_wrong_answer" />
+                            <field name="right_answer" />
+                            <field name="verified" invisible="1" />
                         </group>
                     </group>
                 </sheet>
@@ -46,7 +46,7 @@
            <field name="code">quiz.result</field>
            <field name="prefix">QR</field>
            <field name="padding">5</field>
-           <field name="company_id" eval="False"/>
+           <field name="company_id" eval="False" />
        </record>
     </data>
 
@@ -66,13 +66,22 @@
         <field name="model">quiz.result</field>
         <field name="arch" type="xml">
             <search>
-                <field name="user_id"/>
-                <field name="user_last_name"/>
+                <field name="user_id" />
+                <field name="user_last_name" />
                 <group expand="0" string="Group By">
-                    <filter string="Name" name="group_by_percentge" context="{'group_by':'user_id'}"/>
+                    <filter
+                        string="Name"
+                        name="group_by_percentge"
+                        context="{'group_by':'user_id'}"
+                    />
                 </group>
                 <searchpanel>
-                    <field name="user_id" icon="fa-user" select="multi" enable_counters="1"/>
+                    <field
+                        name="user_id"
+                        icon="fa-user"
+                        select="multi"
+                        enable_counters="1"
+                    />
                 </searchpanel>
             </search>
         </field>
