--- a/Edu_Skill/views/user_details.xml
+++ b/Edu_Skill/views/user_details.xml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_user_tree" model="ir.ui.view">
         <field name="name">user.detail.tree</field>
         <field name="model">user.detail</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="first_name"/>
-                <field name="last_name"/>
-                <field name="age"/>
-                <field name="gender"/>
+                <field name="first_name" />
+                <field name="last_name" />
+                <field name="age" />
+                <field name="gender" />
             </tree>
         </field>
     </record>
@@ -18,7 +18,7 @@
            <field name="code">user.detail</field>
            <field name="prefix">U</field>
            <field name="padding">5</field>
-           <field name="company_id" eval="False"/>
+           <field name="company_id" eval="False" />
        </record>
     </data>
     <record id="view_user_form" model="ir.ui.view">
@@ -28,42 +28,45 @@
             <form>
                 <sheet>
                     <h1>
-                        <field name="reference_no"/>
+                        <field name="reference_no" />
                     </h1>
                     <group>
                         <group>
-                            <label for="first_name"/>
+                            <label for="first_name" />
                             <h1>
-                                <field name="first_name" placeholder="Enter First Name"/>
+                                <field
+                                    name="first_name"
+                                    placeholder="Enter First Name"
+                                />
                             </h1>
-                            <label for="last_name"/>
+                            <label for="last_name" />
                             <h1>
-                                <field name="last_name"/>
+                                <field name="last_name" />
                             </h1>
                         </group>
                         <group>
-                            <field name="image" widget="image" class="oe_avatar"/>
+                            <field name="image" widget="image" class="oe_avatar" />
                         </group>
                     </group>
                     <group>
                         <group>
-                            <field name="age"/>
-                            <field name="gender"/>
-                            <field name="email" widget="phone"/>
-                            <field name="qualification"/>
-                            <field name="graduation"/>
+                            <field name="age" />
+                            <field name="gender" />
+                            <field name="email" widget="phone" />
+                            <field name="qualification" />
+                            <field name="graduation" />
                         </group>
                         <group>
-                            <field name="last_name"/>
-                            <field name="birth_date"/>
+                            <field name="last_name" />
+                            <field name="birth_date" />
                             <field name="phone_number" widget="phone" />
-                            <field name="address"/>
-                            <field name="password"/>
-                            <field name="active" invisible="1"/>
+                            <field name="address" />
+                            <field name="password" />
+                            <field name="active" invisible="1" />
                         </group>
                     </group>
                     <group>
-                        <field name="description"/>
+                        <field name="description" />
                     </group>
                     <group>
                         <div style="text-align:center">
@@ -90,19 +93,44 @@
         <field name="model">user.detail</field>
         <field name="arch" type="xml">
             <search>
-                <field name="first_name" string="First Name" filter_domain="['|',('first_name','ilike',self),('last_name','ilike',self)]" />
-                <field name="age"/>
-                <field name="gender"/>
-                <filter name="filter_male" string="Male" domain="[('gender', '=','Male')]"/>
-                <separator/>
-                <filter name="filter_female" string="Female" domain="[('gender','=','Female')]"/>
-                <separator/>
-                <filter name="filter_active" string="Archived" domain="[('active','=',False)]"/>
+                <field
+                    name="first_name"
+                    string="First Name"
+                    filter_domain="['|',('first_name','ilike',self),('last_name','ilike',self)]"
+                />
+                <field name="age" />
+                <field name="gender" />
+                <filter
+                    name="filter_male"
+                    string="Male"
+                    domain="[('gender', '=','Male')]"
+                />
+                <separator />
+                <filter
+                    name="filter_female"
+                    string="Female"
+                    domain="[('gender','=','Female')]"
+                />
+                <separator />
+                <filter
+                    name="filter_active"
+                    string="Archived"
+                    domain="[('active','=',False)]"
+                />
                 <group expand="0" string="Group By">
-                    <filter string="Gender" name="group_by_gender" context="{'group_by':'gender'}"/>
+                    <filter
+                        string="Gender"
+                        name="group_by_gender"
+                        context="{'group_by':'gender'}"
+                    />
                 </group>
                 <searchpanel>
-                    <field name="gender" icon="fa-users" select="multi" enable_counters="1"/>
+                    <field
+                        name="gender"
+                        icon="fa-users"
+                        select="multi"
+                        enable_counters="1"
+                    />
                 </searchpanel>
             </search>
         </field>
