--- a/Edu_Skill/views/video_details_views.xml
+++ b/Edu_Skill/views/video_details_views.xml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_video_tree" model="ir.ui.view">
         <field name="name">video.detail.tree</field>
         <field name="model">video.detail</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="course_id"/>
-                <field name="video_caption"/>
-                <field name="preview"/>
-                <field name="image"/>
+                <field name="course_id" />
+                <field name="video_caption" />
+                <field name="preview" />
+                <field name="image" />
             </tree>
         </field>
     </record>
@@ -18,7 +18,7 @@
            <field name="code">video.detail</field>
            <field name="prefix">V</field>
            <field name="padding">5</field>
-           <field name="company_id" eval="False"/>
+           <field name="company_id" eval="False" />
        </record>
     </data>
     <record id="view_video_form" model="ir.ui.view">
@@ -28,24 +28,24 @@
             <form>
                 <sheet>
                     <h1>
-                        <field name="reference_no"/>
+                        <field name="reference_no" />
                     </h1>
-                    <field name="image"  widget="image" class="oe_avatar"/>
+                    <field name="image" widget="image" class="oe_avatar" />
                     <group>
                         <group>
-                            <field name="course_id"/>
-                            <field name="series_number"/>
-                            <field name="video_caption"/>
-                            <field name="image"/>
+                            <field name="course_id" />
+                            <field name="series_number" />
+                            <field name="video_caption" />
+                            <field name="image" />
                         </group>
                         <group>
-                            <field name="video"/>
-                            <field name="preview"/>
-                            <field name="time_duration"/>
+                            <field name="video" />
+                            <field name="preview" />
+                            <field name="time_duration" />
                         </group>
                     </group>
                     <group>
-                        <field name="description"/>
+                        <field name="description" />
                     </group>
                 </sheet>
             </form>
@@ -68,12 +68,21 @@
         <field name="model">video.detail</field>
         <field name="arch" type="xml">
             <search>
-                <field name="course_id"/>
+                <field name="course_id" />
                 <group expand="0" string="Group By">
-                    <filter string="Course" name="group_by_course" context="{'group_by':'course_id'}"/>
+                    <filter
+                        string="Course"
+                        name="group_by_course"
+                        context="{'group_by':'course_id'}"
+                    />
                 </group>
                 <searchpanel>
-                    <field name="course_id" icon="fa-book" select="multi" enable_counters="1"/>
+                    <field
+                        name="course_id"
+                        icon="fa-book"
+                        select="multi"
+                        enable_counters="1"
+                    />
                 </searchpanel>
             </search>
         </field>
